Inicio do repositório

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,28 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Galeria
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+    <ion-grid>
+        <ion-row>
+            <ion-col size="6" *ngFor="let Foto of photoService.photos; index as position">
+                <ion-img src="{{ photo.base64 ? photo.base64 : photo.webviewPath }}"></ion-img>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+        <ion-fab-button (click)="photoService.addNewToGallery()">
+            <ion-icon name="camera">
+
+            </ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+    <ion-tab-button tab="tab2">
+        <ion-icon name="images"></ion-icon>
+        <ion-label>Fotos</ion-label>
+    </ion-tab-button>
+</ion-content>
